# telegram_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/bot/: buttons.rs  commands.rs  mod.rs
src/config/: mod.rs
src/hardware/: camera.rs  device.rs  mod.rs
