[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
opencv = { version = "0.84.5", features = ["videoio"] }
teloxide = { version = "0.12.2", features = ["teloxide-macros", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
device_query = "1.1.3"
lazy_static = "1.4.0"
online = "4.0.1"
dotenv = "0.15.0"
